Setting up Recycler View for showing the all posts

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
+
+
+
+
 buildscript {
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
+        dependencies {
+            classpath "com.android.tools.build:gradle:7.0.4"
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+            classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
+            classpath 'com.google.gms:google-services:4.3.15'
+        }
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
