--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 
 buildscript {
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
         dependencies {
             classpath "com.android.tools.build:gradle:7.0.4"
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
