--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     //intuit , it will manage the changes in the size of the screen
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //shimmer effects
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
