--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,14 @@
         android:theme="@style/Theme.BottomNavigation"
         tools:targetApi="31">
         <activity
-            android:name=".contractor.ContractorMainActivity"
+            android:name=".contractor.activity.ContractorMainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".activity.SignUpActivity"
+            android:name=".activity.auth.SignUpActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activity.SIgnInActivity"
+            android:name=".activity.auth.SIgnInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,7 +51,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".client.activity.ClientMainActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
