--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
+    implementation 'androidx.core:core-ktx:version'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 }
