--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,27 +53,19 @@ dependencies {
     def nav_version = "2.5.3"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
     //intuit , it will manage the changes in the size of the screen
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
-
     //shimmer effects
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-
-
-
     //fragment manager
     implementation "androidx.fragment:fragment:1.5.7"
-
     //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     //firebase
     implementation 'com.google.firebase:firebase-storage:20.2.0'
     //glide
@@ -82,5 +74,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:version'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
 
 }
